--- a/.gitignore
+++ b/.gitignore
@@ -54,7 +54,7 @@ applications/gencase/gencase_3d/src
 *.log
 .directory
 *.depend
-*.kde4
-*/.kde4/*
+*.kdev4
+*/.kdev4/*
 src/.directory
 src/.kdev_include_paths
