bug fix in Makefile: src_clean and useless header files removed from tutorial main.C files. All tutorial working

--- a/applications/lib_femus2D/Makefile
+++ b/applications/lib_femus2D/Makefile
@@ -173,7 +173,7 @@ clean:
 	$(RM) $(MAIN)
 
 src_clean:
-	@rm -f ../../src/*.o ../../contrib/matrix/*.o ../../contrib/parallel/*.o
+	@rm -f ../../src/*.o ../../src/obj/*.o ../../contrib/matrix/*.o ../../contrib/parallel/*.o
 
 
 
