--- a/applications/lib_femus3D/Makefile
+++ b/applications/lib_femus3D/Makefile
@@ -97,7 +97,7 @@ SRC_CONTRIB += $(wildcard $(FEMUS_CONTRIB)/parallel/*.C)
 SRC_OBJS = $(patsubst %.C, %-$(METHOD).o, $(SRC))
 CONTRIB_OBJS = $(patsubst %.C, %-$(METHOD).o, $(SRC_CONTRIB))
 # finally define the executable file name 
-MAIN = $(FEMUS_DIR)/lib/libfemus_2d.so
+MAIN = $(FEMUS_DIR)/lib/libfemus_3d.so
 
 LIB_SRC_APP_FILES = $(sort $(notdir $(wildcard $(FEMUS_DIR)/src/*.C )))
 LIB_SRC_APP_OBJS = $(patsubst %.C, %-$(METHOD).o, $(LIB_SRC_APP_FILES))
@@ -173,7 +173,7 @@ clean:
 	$(RM) $(MAIN)
 
 src_clean:
-	@rm -f ../../src/*.o ../../contrib/matrix/*.o ../../contrib/parallel/*.o
+	@rm -f ../../src/*.o ../../src/obj/*.o ../../contrib/matrix/*.o ../../contrib/parallel/*.o
 
 
 
