--- a/tutorials/NavierStokes/TiltedPlaneChannel/DATA/NSproperties.in
+++ b/tutorials/NavierStokes/TiltedPlaneChannel/DATA/NSproperties.in
@@ -30,6 +30,9 @@
    Les            0
    WallFunctionApproach   0
    InterpolatedMuTurb     0
+   TimeDisc               1
+   AssembleOnce           1
+   NodeIDrefPressure      0
 # ---------------------------------------------------------------
 # INITIAL CONDITION
 # ---------------------------------------------------------------
@@ -57,10 +60,10 @@
 #  ! A condition for each group defined in SimulationConfiguration.in file must be specified !
 #
  #  plane bc
-   NSgroup10          wall
-   NSgroup11          wall
+   NSgroup15          wall
+   NSgroup14          wall
+   NSgroup12          pressure_outlet
    NSgroup13          velocity_norm
-   NSgroup12          outflow
 #
 / # ==============================================================
   
