MGSolNS: parameter class moved into NSparameter .C and .h files, now UserNS contains only ic and bc

--- a/tutorials/DD_coupling/neut/DATA/NSproperties.in
+++ b/tutorials/DD_coupling/neut/DATA/NSproperties.in
@@ -32,7 +32,8 @@
    InterpolatedMuTurb     0
    TimeDisc               2
    AssembleOnce           1
-   NodeIDrefPressure      101
+   NodeIDrefPressure      -1
+   NumRestartSol          1
 # ---------------------------------------------------------------
 # INITIAL CONDITION
 # ---------------------------------------------------------------
