--- a/tutorials/DD_coupling/neut/DATA/Tproperties.in
+++ b/tutorials/DD_coupling/neut/DATA/Tproperties.in
@@ -46,6 +46,7 @@
 # 19,20,21,22,29,30,32,51,52,53,54
    Tgroup16          Twall
    Tgroup15          insulation
+   tgroup17          insulation
 #   
 / #######################################################################
   
