--- a/tutorials/ImmersedBoundary/channel/DATA/NSproperties.in
+++ b/tutorials/ImmersedBoundary/channel/DATA/NSproperties.in
@@ -35,6 +35,7 @@
    TimeDisc               2
    AssembleOnce           1
    NodeIDrefPressure      -1
+   NumRestartSol          1
 # ---------------------------------------------------------------
 # INITIAL CONDITION
 # ---------------------------------------------------------------
