--- a/tutorials/NavierStokes/TiltedPlaneChannel/DATA/NSproperties.in
+++ b/tutorials/NavierStokes/TiltedPlaneChannel/DATA/NSproperties.in
@@ -33,6 +33,7 @@
    TimeDisc               2
    AssembleOnce           1
    NodeIDrefPressure      0
+   NumRestartSol          1
 # ---------------------------------------------------------------
 # INITIAL CONDITION
 # ---------------------------------------------------------------
