Gencase application executable link avoided
2D and 3D gencase executable files are now directly generated in femus bin directory

--- a/applications/gencase/gencase_2d/Makefile
+++ b/applications/gencase/gencase_2d/Makefile
@@ -106,7 +106,7 @@ OBJS_APP = $(addprefix $(OBJ_DIR), $(SRC_OBJS))
 
 
 # finally define the executable file 
-MAIN = $(FM_MYAPP)
+MAIN = $(FEMUS_DIR)/bin/$(FM_MYAPP)
 
 
 
